# eqn-lint

./: .env.example  .gitignore  1  DEVELOPERHINTS.txt  README.md  TODO.md  eqn-lint.py  plus_version.sh  pyproject.toml  requirements.txt  setup.py  strip_nonascii.sh  version_sync.sh
.github/workflows/: publish.yml
eqnlint/: __init__.py
eqnlint.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
eqnlint/lib/: _ai.py  _budget.py  _cli.py  _fewshots.py  _textio.py
lib/: _ai.py  _cli.py  _debug.py  _fewshots.py  _textio.py
test/: LambShiftGA.tex  foo.out  references.bib  test_paper.tex
