[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eqnlint"
version = "0.1.0"
description = "Audits LaTeX papers for units, dimensions, symbols, citations, context, opacity, and prose."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
  { name = "John Ryan", email = "john.l.ryan@mac.com" }
]
keywords = ["latex", "audit", "linter", "units", "dimensions", "citations", "prose"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Text Processing :: Markup :: LaTeX",
  "Intended Audience :: Science/Research",
  "Development Status :: 4 - Beta"
]

dependencies = [
  "openai",
  "sympy",
  "tqdm",
  "rich",
]

[project.urls]
Homepage = "https://github.com/tambotitree/eqnlint-project"
Issues   = "https://github.com/tambotitree/eqnlint-project/issues"

[project.scripts]
eqnlint            = "eqnlint.bin.eqnlint:main"
audit-units        = "eqnlint.bin.units_audit:main"
audit-symbolic     = "eqnlint.bin.symbolic_audit:main"
audit-context      = "eqnlint.bin.context_audit:main"
audit-prose        = "eqnlint.bin.prose_audit:main"
audit-citation     = "eqnlint.bin.citation_audit:main"
audit-opacity      = "eqnlint.bin.opacity_audit:main"
audit-dimensional  = "eqnlint.bin.dimensional_audit:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["eqnlint*"]
